--- a/practice1.ipynb
+++ b/practice1.ipynb
@@ -6,7 +6,7 @@
       "name": "practice1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPul65MmZ+UoEWtm3iiaQSc",
+      "authorship_tag": "ABX9TyM9LJr2m3Ql90CR0yPXmeqn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -207,25 +207,24 @@
       "cell_type": "code",
       "source": [
         "x=(\"apple\",\"banana\",\"cherry\")\n",
-        "print  x\n",
+        "print  (x)\n",
         "print(type(x))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 131
+          "base_uri": "https://localhost:8080/"
         },
         "id": "OmZTC75zGVLB",
-        "outputId": "3095c42f-26ed-4b93-8744-08b2b925ee1e"
+        "outputId": "4cb4a914-2b5d-4c9d-b716-c5a6bf3bb347"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-42c103a7f16c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    print  x\u001b[0m\n\u001b[0m           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Missing parentheses in call to 'print'. Did you mean print(x)?\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "('apple', 'banana', 'cherry')\n",
+            "<class 'tuple'>\n"
           ]
         }
       ]
